txt fix